content/v1.4.5/en/api/campaign/Alliance.md
---
title: "Alliance"
description: "Auto-generated class reference for Alliance."
---
# Alliance

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class Alliance`
**Base:** none
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/AllianceCampaignBehavior.cs`

## Overview

`Alliance` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsAlliance logic.

```csharp
// Static call; no instance required
Alliance.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsCallToWarAgreement logic.

```csharp
// Static call; no instance required
Alliance.AutoGeneratedStaticCollectObjectsCallToWarAgreement(o, collectedObjects);
```

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** **Purpose:** Registers events with the current system so it can later be observed or dispatched.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** **Purpose:** Synchronizes data across the relevant contexts or systems.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.SyncData(dataStore);
```

### OnAllianceOfferedToPlayer
`public void OnAllianceOfferedToPlayer(Kingdom offeringKingdom)`

**Purpose:** **Purpose:** Invoked when the alliance offered to player event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnAllianceOfferedToPlayer(offeringKingdom);
```

### OnAllianceOfferedToPlayerKingdom
`public void OnAllianceOfferedToPlayerKingdom(Kingdom offeringKingdom)`

**Purpose:** **Purpose:** Invoked when the alliance offered to player kingdom event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnAllianceOfferedToPlayerKingdom(offeringKingdom);
```

### OnCallToWarAgreementProposedToPlayer
`public void OnCallToWarAgreementProposedToPlayer(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed to player event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnCallToWarAgreementProposedToPlayer(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedToPlayerKingdom
`public void OnCallToWarAgreementProposedToPlayerKingdom(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed to player kingdom event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnCallToWarAgreementProposedToPlayerKingdom(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedByPlayer
`public void OnCallToWarAgreementProposedByPlayer(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed by player event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnCallToWarAgreementProposedByPlayer(proposedKingdom, kingdomToCallToWarAgainst);
```

### GetAllianceEndDate
`public CampaignTime GetAllianceEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Reads and returns the alliance end date value held by the this instance.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
var result = alliance.GetAllianceEndDate(kingdom1, kingdom2);
```

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Invoked when the call to war agreement proposed by player kingdom event is raised.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.OnCallToWarAgreementProposedByPlayerKingdom(proposedKingdom, kingdomToCallToWarAgainst);
```

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Determines whether the this instance is in the ally with kingdom state or condition.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
var result = alliance.IsAllyWithKingdom(kingdom1, kingdom2);
```

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**Purpose:** **Purpose:** Starts the alliance flow or state machine.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.StartAlliance(proposerKingdom, receiverKingdom);
```

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** **Purpose:** Executes the EndAlliance logic.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.EndAlliance(kingdom1, kingdom2);
```

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Determines whether the this instance already holds called to war.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
var result = alliance.HasCalledToWar(callingKingdom, calledKingdom);
```

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, out Kingdom callingKingdom)`

**Purpose:** **Purpose:** Determines whether the this instance is in the at war by call to war agreement state or condition.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
var result = alliance.IsAtWarByCallToWarAgreement(calledKingdom, kingdomToCallToWarAgainst, callingKingdom);
```

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**Purpose:** **Purpose:** Starts the call to war agreement flow or state machine.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.StartCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst, 0, false);
```

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** **Purpose:** Executes the EndCallToWarAgreement logic.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.EndCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst);
```

### DenyCallToWarAgreement
`public void DenyCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Executes the DenyCallToWarAgreement logic.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
alliance.DenyCallToWarAgreement(callingKingdom, calledKingdom);
```

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** **Purpose:** Reads and returns the kingdoms to call to war against value held by the this instance.

```csharp
// Obtain an instance of Alliance from the subsystem API first
Alliance alliance = ...;
var result = alliance.GetKingdomsToCallToWarAgainst(callingKingdom, calledKingdom);
```

## Usage Example

```csharp
Alliance.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

## See Also

- [Area Index](../)